--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "prettier-eslint": "^9.0.1",
-    "react-scripts": "^0.9.5"
+    "react-app-rewire-aliases": "^0.2.0",
+    "react-app-rewired": "^1.6.2",
+    "react-scripts": "^1.0.14"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-app-rewired eject"
   }
 }
